# holium-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pull_request_template.md
api/: Cargo.toml
cli/: .gitignore  Cargo.toml
cli/src/: main.rs
cli/src/config/: config.rs  mod.rs  models.rs  sparse_config.rs  validation.rs
cli/src/repo/: mod.rs
cli/src/utils/: mod.rs
cli/tests/: main.rs
cli/tests/config/: mod.rs
cli/tests/repo/: mod.rs
crates/api/: Cargo.toml
crates/api/examples/: example.rs
crates/api/src/: lib.rs
crates/api/src/data/: data_tree.rs  linked_data_tree.rs  mod.rs
crates/api/src/data/importer/: bin.rs  cbor.rs  csv.rs  json.rs  mod.rs
crates/api/src/fragment_serialize/: linked_data_tree.rs  mod.rs  transformation.rs
crates/api/src/runtime/: memory.rs  mod.rs
crates/api/src/transformation/: mod.rs
crates/api/tests/: runtime.rs
crates/cli/: Cargo.toml
crates/cli/config/: models.rs
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs
crates/cli/src/commands/completion_script/: mod.rs
crates/cli/src/commands/connection/: mod.rs
crates/cli/src/commands/connection/commands/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
crates/cli/src/commands/init/: mod.rs
crates/cli/src/commands/portation/: mod.rs
crates/cli/src/commands/portation/commands/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/src/commands/project/: mod.rs
crates/cli/src/commands/project/commands/: export.rs  import.rs  mod.rs  run.rs
crates/cli/src/commands/run/: mod.rs
crates/cli/src/commands/shaper/: mod.rs
crates/cli/src/commands/shaper/commands/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/src/commands/source/: mod.rs
crates/cli/src/commands/source/commands/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/src/commands/transformation/: mod.rs
crates/cli/src/commands/transformation/commands/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/src/config/: mod.rs  shadow_merge.rs  updatable_field.rs
crates/cli/src/data/: mod.rs
crates/cli/src/data/import/: mod.rs
crates/cli/src/data/import/importer/: bin.rs  cbor.rs  csv_importer.rs  json.rs  mod.rs
crates/cli/src/data/list/: mod.rs
crates/cli/src/data/remove/: mod.rs
crates/cli/src/init/: mod.rs
crates/cli/src/repo/: mod.rs
crates/cli/src/run/: mod.rs
crates/cli/src/transformation/: add.rs  list.rs  mod.rs  remove.rs
crates/cli/src/utils/: errors.rs  mod.rs
crates/cli/src/utils/cbor/: as_holium_cbor.rs  helpers.rs  mod.rs  traits.rs  write_holium_cbor.rs
crates/cli/src/utils/errors/: mod.rs
crates/cli/src/utils/interplanetary/: mod.rs
crates/cli/src/utils/interplanetary/context/: mod.rs
crates/cli/src/utils/interplanetary/fs/: mod.rs
crates/cli/src/utils/interplanetary/fs/constants/: block_multicodec.rs
crates/cli/src/utils/interplanetary/fs/helpers/: clear_ip_area.rs
crates/cli/src/utils/interplanetary/fs/traits/: as_ip_block.rs  mod.rs
crates/cli/src/utils/interplanetary/kinds/: connection.rs  connexion.rs  dry_transformation.rs  link.rs  metadata.rs  mod.rs  module_bytecode.rs  module_bytecode_envelope.rs  pipeline.rs  pipeline_edge.rs  pipeline_vertex.rs  recursive_data.rs  recursive_data_envelope.rs  scalar_data.rs  scalar_data_envelope.rs  selector.rs
crates/cli/src/utils/interplanetary/kinds/helpers/: holium_data.rs  mod.rs
crates/cli/src/utils/interplanetary/multiformats/: mod.rs
crates/cli/src/utils/local/: mod.rs
crates/cli/src/utils/local/context/: mod.rs
crates/cli/src/utils/local/context/constants/: mod.rs
crates/cli/src/utils/local/context/helpers/: mod.rs
crates/cli/src/utils/local/export/: mod.rs
crates/cli/src/utils/local/helpers/: mod.rs
crates/cli/src/utils/local/import/: mod.rs
crates/cli/src/utils/local/models/: connection.rs  data.rs  mod.rs  shaper.rs  source.rs  transformation.rs
crates/cli/src/utils/local/trees/: transformation.rs
crates/cli/src/utils/repo/: constants.rs  errors.rs  helpers.rs  mod.rs  paths.rs
crates/cli/src/utils/repo/context/: mod.rs
crates/cli/src/utils/repo/models/: mod.rs  portation.rs
crates/cli/src/utils/repo/ports/: export_from_holium.rs  import_to_holium.rs  mod.rs
crates/cli/src/utils/run/: mod.rs
crates/cli/src/utils/run/data/: data_tree.rs
crates/cli/src/utils/storage/: mod.rs
crates/cli/tests/: main.rs
crates/cli/tests/commands/: mod.rs
crates/cli/tests/commands/connection/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
crates/cli/tests/commands/shaper/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/tests/commands/source/commands/: create.rs  delete.rs  list.rs  read.rs  update.rs
crates/cli/tests/commands/transformation/commands/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
crates/cli/tests/config/: mod.rs
crates/cli/tests/data/: import.rs  list.rs  mod.rs  remove.rs
crates/cli/tests/data/assets/: import.csv  import_with_duplicate.json  import_with_tags.cbor
crates/cli/tests/helpers/: mod.rs
crates/cli/tests/helpers/connection/: mod.rs
crates/cli/tests/helpers/repo/: mod.rs
crates/cli/tests/helpers/shaper/: mod.rs
crates/cli/tests/helpers/source/: mod.rs
crates/cli/tests/helpers/transformation/: mod.rs
crates/cli/tests/helpers/transformation/assets/: alternative_import.wasm  import.wasm
crates/cli/tests/init/: mod.rs
crates/cli/tests/repo/: mod.rs
crates/cli/tests/run/: mod.rs
crates/cli/tests/run/assets/: inputs.json  module.wasm  wrong_inputs.json
crates/cli/tests/transformation/: add.rs  list.rs  mod.rs  remove.rs
crates/cli/tests/transformation/assets/: import_other.wasm
crates/pack/: Cargo.toml
crates/pack/src/: lib.rs
crates/pack/src/store/: mod.rs
crates/pack/tests/: lib.rs
crates/pack/tests/store/: mod.rs
crates/pipeline/: Cargo.toml  README.md
crates/pipeline/src/: error.rs  types.rs
crates/pipeline/tests/: types.rs
holium-runtime-cli/: Cargo.toml  README.md
holium-runtime-cli/src/: main.rs
holium-runtime-lib/: Cargo.toml
holium-runtime-lib/src/: env.rs  error.rs  lib.rs
(+185 files in other folders)
