[package]
name = "holium-runtime"
version = "0.1.0"
authors = ["tchataigner <thomas@polyphene.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "holium-runtime-cli",
    "holium-runtime-lib",
]

[dependencies]
