[package]
name = "holium"
version = "1.0.1-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"
license = "MIT"
description = """This crate provides a CLI offering a simple implementation of the Holium protocol.
For more information, check out the official documentation at https://docs.holium.org ."""
documentation = "https://docs.holium.org"
readme = "README.md"
homepage = "https://holium.org"
repository = "https://github.com/polyphene/holium-rs"
keywords = ["holium", "cli", "data", "wasm"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "^1.0.42"
base64 = "^0.13.0"
bimap = "^0.6.1"
bincode = "^1.3.3"
blake3 = "^1.0.0"
cid = "^0.7.0"
clap = "^2.33"
console = "^0.15.0"
csv = "^1.1.6"
dirs = "^4.0.0"
either = "^1.6.1"
ellipse = "^0.2.0"
humansize = "^1.1.1"
jsonschema = "^0.13.2"
lazy_static = "^1.4.0"
mime_guess = "^2.0.3"
optional_struct = "^0.2.0"
path-clean = "^0.1.0"
petgraph = "^0.6.0"
prettytable-rs = "^0.8.0"
serde = { version = "^1.0.126", features = ["derive"] }
serde_cbor = "^0.11.1"
serde_derive = "^1.0.126"
serde_json = { version = "^1.0.66", features = ["preserve_order"] }
serde_yaml = "^0.8.21"
sk-cbor = "^0.1.2"
sled = "^0.34.7"
tempfile = "^3.2.0"
thiserror = "^1.0.26"
wasmer = "^2.0.0"

[dev-dependencies]
assert_cmd = "^2.0.2"
assert_fs = "^1.0.3"
predicates = "^2.0.0"
walkdir = "^2.3.2"

[[bin]]
name = "holium"
path = "src/main.rs"