[package]
name = "holium-runtime-cli"
version = "0.1.0"
authors = ["tchataigner <tom.chataigner@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holium-runtime-lib = { path = "../holium-runtime-lib" }
clap = "3.0.0-beta.2"
anyhow = "1.0.40"