[package]
name = "holium-runtime-lib"
version = "0.1.0"
authors = ["tchataigner <tom.chataigner@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "1.0.2"
wasmer-compiler = "1.0.2"
wasmer-runtime = "0.17.1"
anyhow = "1.0.40"
