[package]
name = "holium-runtime-lib"
version = "0.1.0"
authors = ["tchataigner <thomas@polyphene.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
wasmer = "1.0.2"
wasmer-compiler = "1.0.2"
wasmer-runtime = "0.17.1"
wat = "1.0.37"