[package]
name = "holium"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.42"
cid = "^0.7.0"
csv = "^1.1.6"
itertools = "^0.10.1"
lazy_static = "^1.4.0"
regex = "^1.5.4"
thiserror = "^1.0.26"
serde_cbor = "^0.11.1"
serde_json = "^1.0.66"

[dev-dependencies]
hex = "^0.4.3"