[package]
name = "holium"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[dependencies]
holium-utils = { path = "../utils" }
anyhow = "^1.0.42"
blake3 = "^1.0.0"
cid = "^0.7.0"
csv = "^1.1.6"
itertools = "^0.10.1"
lazy_static = "^1.4.0"
regex = "^1.5.4"
thiserror = "^1.0.26"
serde = { version = "^1.0.130", features = ["derive"] }
serde_cbor = "^0.11.1"
serde_json = "^1.0.66"
wasmer = "^2.0.0"

[dev-dependencies]
hex = "^0.4.3"