[package]
name = "holium-cli"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[dependencies]
holium = { path = "../api" }
anyhow = "^1.0.42"
cid = "^0.7.0"
clap = "^2.33"
console = "^0.14.1"
csv = "^1.1.6"
dirs = "^3.0.2"
itertools = "^0.10.1"
serde = "^1.0.126"
serde_cbor = "^0.11.1"
serde_derive = "^1.0.126"
serde_json = "^1.0.66"
thiserror = "^1.0.26"
toml = "^0.5.8"

[dev-dependencies]
assert_cmd = "^1.0.7"
assert_fs = "^1.0.3"
predicates = "^2.0.0"