[package]
name = "holium-cli"
version = "1.0.0-alpha"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

[dependencies]
holium = { path = "../api" }
holium-utils = { path = "../utils" }
anyhow = "^1.0.42"
bincode = "^1.3.3"
blake3 = "^1.0.0"
cid = "^0.7.0"
clap = "^2.33"
console = "^0.14.1"
csv = "^1.1.6"
dirs = "^3.0.2"
ellipse = "^0.2.0"
humansize = "^1.1.1"
itertools = "^0.10.1"
jsonschema = "^0.12.2"
lazy_static = "^1.4.0"
optional_struct = "^0.2.0"
path-clean = "^0.1.0"
prettytable-rs = "^0.8.0"
serde = { version = "^1.0.126", features = ["derive"] }
serde_cbor = "^0.11.1"
serde_derive = "^1.0.126"
serde_json = "^1.0.66"
serde_yaml = "^0.8.21"
sled = "^0.34.7"
tempfile = "^3.2.0"
thiserror = "^1.0.26"
toml = "^0.5.8"

[dev-dependencies]
assert_cmd = "^1.0.7"
assert_fs = "^1.0.3"
predicates = "^2.0.0"
walkdir = "^2.3.2"