[package]
name = "holium-pack"
version = "0.1.0"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "^0.8"
flate2 = "^1.0"
blake3 = "^0.3"

[dev-dependencies]
hex = "^0.4"