[package]
name = "holium-pipeline"
version = "0.1.0"
authors = ["Polyphene <contact@polyphene.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holium-pipe = { path = "../pipe" , version = "=0.1.0" }
petgraph = "0.5.1"
thiserror = "1.0.25"